--- a/joine-generator/src/main/resources/templates/tool/gen/gen.html
+++ b/joine-generator/src/main/resources/templates/tool/gen/gen.html
@@ -94,7 +94,7 @@
                     width: '20%',
                     align: 'center',
                     formatter: function (value, row, index) {
-                        var msg = '<a class="btn btn-info btn-xs" href="#" onclick="genCode(\'' + row.tableName + '\')"><i class="fa fa-bug"></i>生成代码</a> ';
+                        var msg = '<a class="btn btn-info btn-xs" href="javascript:void(0)" onclick="genCode(\'' + row.tableName + '\')"><i class="fa fa-bug"></i>生成代码</a> ';
                         return msg;
                     }
                 }]
