--- a/joine-admin/src/main/resources/templates/system/notice/add.html
+++ b/joine-admin/src/main/resources/templates/system/notice/add.html
@@ -55,6 +55,7 @@
         placeholder: '请输入公告内容',
         height: 192,
         lang: 'zh-CN',
+        followingToolbar: false,
         callbacks: {
             onImageUpload: function (files) {
                 sendFile(files[0], this);
